--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^14.2.15",
+    "@next/mdx": "^14.2.30",
+    "@next/swc-win32-x64-msvc": "^15.3.4",
     "@next/third-parties": "^14.2.15",
     "@openpanel/nextjs": "^1.0.7",
     "@openrouter/ai-sdk-provider": "^0.0.6",
@@ -76,7 +77,7 @@
     "moment": "^2.30.1",
     "next": "^14.2.15",
     "next-auth": "5.0.0-beta.25",
-    "next-intl": "^4.0.2",
+    "next-intl": "^4.3.1",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.9.18",
     "openai": "^4.78.1",
