feat: 升级支付系统架构，从localStorage迁移到Redis缓存
🚀 主要改进：
- 安全性提升：敏感终端信息从前端localStorage迁移到服务器端Redis存储
- 架构优化：实现全局共享主终端模式，避免多用户冲突
- 用户体验：优化支付流程，自动处理激活和签到
- 新增功能：Redis管理页面，支持终端信息管理

📦 技术变更：
- 新增redis依赖包
- 新增Redis缓存工具库(lib/redis-cache.ts)
- 新增Redis版本支付API(app/api/sqb-redis/route.ts)
- 新增Redis管理页面(app/[locale]/redis-admin/page.tsx)
- 优化支付页面，支持发货信息收集
- 更新环境配置，添加Redis连接配置
- 移除旧的测试脚本

🔒 安全改进：
- 敏感信息服务器端存储
- 前端显示脱敏处理
- 完善的错误处理和日志记录

✨ 用户体验：
- 支付流程更加流畅
- 移动端适配优化
- 完整的支付状态查询
- 支付成功后发货信息收集

--- a/.env.development
+++ b/.env.development
@@ -67,6 +67,11 @@ ADMIN_EMAILS = "david66cw002@2925.com,david66cw003@2925.com,david66cw@2925.com,1
 NEXT_PUBLIC_DEFAULT_THEME = "light"
 
 # -----------------------------------------------------------------------------
+# Redis Configuration for Terminal Cache
+# -----------------------------------------------------------------------------
+REDIS_URL="redis://default:iaHcwOyIPMHZWDfhMupndJya8ywCcVhl@redis-12949.crce194.ap-seast-1-1.ec2.redns.redis-cloud.com:12949"
+
+# -----------------------------------------------------------------------------
 # Storage with aws s3 sdk
 # https://docs.aws.amazon.com/s3/index.html
 # 可以使用AWS S3 存储服务  也可以使用腾讯云的COS服务，目前改用Cloudflare R2了
