--- a/.env.example
+++ b/.env.example
@@ -81,6 +81,11 @@ NEXT_PUBLIC_DEFAULT_THEME = "light"
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_DEV_AUTH_ENABLED = "true"
 
+# -----------------------------------------------------------------------------
+# Redis Configuration for Terminal Cache
+# -----------------------------------------------------------------------------
+REDIS_URL = "redis://default:password@hostname:port"
+
 # NextAuth URL配置
 NEXTAUTH_URL = "http://localhost:3000"
 # 生产环境需要设置为实际域名，例如：
