--- a/.env.production
+++ b/.env.production
@@ -64,6 +64,11 @@ ADMIN_EMAILS = "david66cw003@2925.com,david66cw@2925.com,1608840095@qq.com,16088
 NEXT_PUBLIC_DEFAULT_THEME = "light"
 
 # -----------------------------------------------------------------------------
+# Redis Configuration for Terminal Cache
+# -----------------------------------------------------------------------------
+REDIS_URL="redis://default:iaHcwOyIPMHZWDfhMupndJya8ywCcVhl@redis-12949.crce194.ap-seast-1-1.ec2.redns.redis-cloud.com:12949"
+
+# -----------------------------------------------------------------------------
 # Email Service with Brevo (Sendinblue) 邮箱服务 放弃这个方案 国内支持不好
 # https://www.brevo.com/
 # -----------------------------------------------------------------------------
