--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-tweet": "^3.2.1",
+    "redis": "^5.5.6",
     "sharp": "^0.34.2",
     "simple-flakeid": "^0.0.5",
     "sonner": "^1.7.4",
